package ast.expressions;

public class LogicalExpression {
}
